<resources>
    <string name="app_name">Chief Technology Officer</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Chief Technology Officer</string>
    <string name="nav_header_subtitle">vcalazas@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logo">Logo</string>
    <string name="v_deos">Vídeos</string>
    <string name="imagens">Imagens</string>
    <string name="audio">Audio</string>
    <string name="gr_ficos">Gráficos</string>
    <string name="anima_es">Animações</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="abrir">Abrir</string>
    <string name="capturar">Capturar</string>
    <string name="nenhum_arquivo_selecionado">Nenhum arquivo selecionado.</string>
    <string name="come_ar_a_gravar">Começar a gravar</string>
    <string name="reproduzir_udio">Reproduzir áudio</string>
    <string name="parar_udio">Parar áudio</string>
</resources>
