<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_animations"
            android:icon="@drawable/ic_menu_animations"
            android:title="@string/anima_es" />
        <item
            android:id="@+id/nav_graphs"
            android:icon="@drawable/ic_menu_graphs"
            android:title="@string/gr_ficos" />
        <item
            android:id="@+id/nav_images"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/imagens" />
        <item
            android:id="@+id/nav_video"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/v_deos" />
        <item
            android:id="@+id/nav_audio"
            android:icon="@drawable/ic_menu_music"
            android:title="@string/audio" />
    </group>

</menu>
